--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,17 +5,15 @@
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # druid数据源配置
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/xiaoju?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-#spring.datasource.password=sj2802
-#spring.datasource.username=root
-#spring.datasource.dbcp2.min-idle=5
-#spring.datasource.dbcp2.initial-size=5
-#spring.datasource.dbcp2.max-total=5
-#spring.datasource.dbcp2.max-wait-millis=200
-
-
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/xiaoju?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+spring.datasource.password=sj2802
+spring.datasource.username=root
+spring.datasource.dbcp2.min-idle=5
+spring.datasource.dbcp2.initial-size=5
+spring.datasource.dbcp2.max-total=5
+spring.datasource.dbcp2.max-wait-millis=200
 
 # 自定义属性
 my1.age=28
@@ -30,16 +28,16 @@ spring.application.name=spring-in-action
 
 # mybatis
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
-#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-#mybatis.type-aliases-package=com.sikiapp.springbootinaction.model
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+mybatis.type-aliases-package=com.sikiapp.springbootinaction.model
 
 # 多数据源配置
-spring.datasource.test1.jdbc-url=jdbc:mysql://localhost:3306/xiaoju?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-spring.datasource.test1.password=sj2802
-spring.datasource.test1.username=root
-spring.datasource.test1.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.test2.jdbc-url=jdbc:mysql://localhost:3306/sikiapp3_1?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-spring.datasource.test2.password=sj2802
-spring.datasource.test2.username=root
-spring.datasource.test2.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.test1.jdbc-url=jdbc:mysql://localhost:3306/xiaoju?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+#spring.datasource.test1.password=sj2802
+#spring.datasource.test1.username=root
+#spring.datasource.test1.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.datasource.test2.jdbc-url=jdbc:mysql://localhost:3306/sikiapp3_1?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+#spring.datasource.test2.password=sj2802
+#spring.datasource.test2.username=root
+#spring.datasource.test2.driver-class-name=com.mysql.cj.jdbc.Driver
