Mod mybatis分页插件和通用插件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,20 @@ mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-aliases-package=com.sikiapp.springbootinaction.model
 
+# 通用Mapper
+mapper.identity=MYSQL
+mapper.mappers=com.sikiapp.springbootinaction.mapper
+mapper.not-empty=true
+mapper.enum-as-simple-type=true
+
+# 分页插件
+pagehelper.helper-dialect=mysql
+pagehelper.params=count=countSql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+
+
+
 # 多数据源配置
 #spring.datasource.test1.jdbc-url=jdbc:mysql://localhost:3306/xiaoju?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
 #spring.datasource.test1.password=sj2802
