--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,25 +33,15 @@ mybatis.type-aliases-package=com.sikiapp.springbootinaction.model
 
 # 通用Mapper
 mapper.identity=MYSQL
-mapper.mappers=com.sikiapp.springbootinaction.mapper
+mapper.mappers=tk.mybatis.mapper.common.BaseMapper
 mapper.not-empty=true
 mapper.enum-as-simple-type=true
 
 # 分页插件
-pagehelper.helper-dialect=mysql
-pagehelper.params=count=countSql
+pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
-pagehelper.support-methods-arguments=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 
 
 
-# 多数据源配置
-#spring.datasource.test1.jdbc-url=jdbc:mysql://localhost:3306/xiaoju?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-#spring.datasource.test1.password=sj2802
-#spring.datasource.test1.username=root
-#spring.datasource.test1.driver-class-name=com.mysql.cj.jdbc.Driver
-#
-#spring.datasource.test2.jdbc-url=jdbc:mysql://localhost:3306/sikiapp3_1?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-#spring.datasource.test2.password=sj2802
-#spring.datasource.test2.username=root
-#spring.datasource.test2.driver-class-name=com.mysql.cj.jdbc.Driver
