--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <mybatis-spring-boot>1.3.4</mybatis-spring-boot>
+        <druid>1.1.16</druid>
+        <mapper-mybatis>2.1.5</mapper-mybatis>
+        <pagehelper>1.2.3</pagehelper>
     </properties>
 
     <dependencies>
@@ -57,24 +61,32 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.4</version>
+            <version>${mybatis-spring-boot}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.16</version>
+            <version>${druid}</version>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>2.1.5</version>
+            <version>${mapper-mybatis}</version>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.2.3</version>
+            <version>${pagehelper}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.0</version>
+        </dependency>
 
 
     </dependencies>
