--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,8 @@ mybatis.type-aliases-package=com.sikiapp.springbootinaction.model
 
 # 通用Mapper
 mapper.identity=MYSQL
-mapper.mappers=tk.mybatis.mapper.common.BaseMapper
+#mapper.mappers=tk.mybatis.mapper.common.BaseMapper
+mapper.mappers=com.sikiapp.springbootinaction.mapper.common.sikiMapper
 mapper.not-empty=true
 mapper.enum-as-simple-type=true
 
@@ -43,5 +44,20 @@ pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
 
+# Redis
+spring.redis.host=localhost
+spring.redis.password=
+# 连接超时时间（毫秒）
+spring.redis.timeout=1000
+# Redis默认情况下有16个分片，这里配置具体使用的分片，默认是0
+spring.redis.database=0
+# 连接池最大连接数（使用负值表示没有限制） 默认 8
+spring.redis.lettuce.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+spring.redis.lettuce.pool.max-wait=-1
+# 连接池中的最大空闲连接 默认 8
+spring.redis.lettuce.pool.max-idle=8
+# 连接池中的最小空闲连接 默认 0
+spring.redis.lettuce.pool.min-idle=0
 
 
