Add RabbitMQ opts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,7 @@ pagehelper.params=count=countSql
 
 # Redis
 spring.redis.host=localhost
+spring.redis.port=6379
 spring.redis.password=
 # 连接超时时间（毫秒）
 spring.redis.timeout=1000
@@ -59,5 +60,14 @@ spring.redis.lettuce.pool.max-wait=-1
 spring.redis.lettuce.pool.max-idle=8
 # 连接池中的最小空闲连接 默认 0
 spring.redis.lettuce.pool.min-idle=0
+
+# RabbitMQ
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+# 手动ACK 不开启自动ACK模式,目的是防止报错后未正确处理消息丢失 默认 为 none
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
 
 
