--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,11 @@
 server.servlet.context-path=/prod
+
+# 登陆所需的账号密码
+spring.security.user.name=sikiapp
+spring.security.user.password=sikiapp
+# 便于客户端可以在受保护的服务器上注册api
+spring.boot.admin.client.username=sikiapp
+spring.boot.admin.client.password=sikiapp
+# 便服务器可以访问受保护的客户端端点
+spring.boot.admin.client.instance.metadata.user.name=sikiapp
+spring.boot.admin.client.instance.metadata.user.password=sikiapp
