--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ my1.name=Robert
 
 # 环境
 debug=false
-spring.profiles.active=dev
+spring.profiles.active=prod
 logging.file=my.log
 spring.output.ansi.enabled=DETECT
 spring.application.name=spring-in-action
@@ -69,5 +69,23 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.virtual-host=/
 # 手动ACK 不开启自动ACK模式,目的是防止报错后未正确处理消息丢失 默认 为 none
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+# actuator
+info.blog-url=http://www.sikiapp.com
+info.author=Robert
+info.version=@project.version@
+# 加载所有的端点/默认只加载了 info / health
+management.endpoints.web.exposure.include=*
+# 默认 /actuator spring-boot-admin 扫描不到
+management.endpoints.web.base-path=/
+management.endpoint.health.show-details=always
+management.endpoint.shutdown.enabled=false
+
+# Spring Boot Admin
+spring.boot.admin.ui.title=Spring Boot Admin
+# 单机自监控
+spring.boot.admin.client.url=http://localhost:8080/${server.servlet.context-path}
+spring.boot.admin.client.instance.prefer-ip=true
+
 
 
