Add Data Validate opts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ my1.name=Robert
 
 # 环境
 debug=false
-spring.profiles.active=prod
+spring.profiles.active=dev
 logging.file=my.log
 spring.output.ansi.enabled=DETECT
 spring.application.name=spring-in-action
