--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,10 @@
             <artifactId>guava</artifactId>
             <version>27.1-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
         <!-- shiro 相关包 -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
